# just-recive-and-post

./: .containerignore  .gitignore  Cargo.toml  Containerfile  Rocket.toml
.github/workflows/: package.yml
src/: main.rs  test.rs
static/: index.html.tera  style.css
static/css/: style.css
