[package]
name = "just-recive-and-post"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rocket_dyn_templates = { version = "0.1.0-rc.2", features = ["tera"] }
serde = { version = "1.0", features = ["derive"] }
rocket_sync_db_pools = { version = "0.1.0-rc.2", features = ["sqlite_pool"] }
rusqlite = { version = "0.28.0", features = ["bundled"] }
chrono = "0.4"
